attempting github pages render my react

--- a/neuraln0ne-portfolio/package.json
+++ b/neuraln0ne-portfolio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neuraln0ne-portfolio",
-  "homepage": "https://neuraln0ne.github.io",
+  "homepage": "https://pylneuralnet.github.io/portfolio-github-pages/neuraln0ne-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
